# fast_rust_v2

./: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
fast_admin/: Cargo.toml
fast_admin/src/controller/: menu_controller.rs  user_controller.rs
fast_admin/src/service/: menu_service.rs
fast_common/: Cargo.toml  build.rs
fast_common/src/: lib.rs  profile.html
fast_common/src/base/: base_service.rs  base_storage.rs  mod.rs
fast_common/src/common/: api_result.rs
fast_common/src/config/: log_config.rs  mod.rs  orm_config.rs
fast_common/src/middleware/: auth.rs  handle_method.rs  mod.rs
fast_common/src/models/: dept_info.rs  mod.rs  profile_info.rs
fast_common/src/sql/: profile.html
fast_common/src/utils/: crypt_util.rs  global_data.rs  mod.rs  redis_util.rs
fast_demo/src/: main.rs
