[package]
name = "demo"
version = "0.1.0"
authors = ["baiyu <by965738071@163>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis = { version = "4", default-features = false, features = ["debug_mode"] }
rbdc-mysql = { version = "0.1.16" }
rbs = { version = "0.1.11" }
rbson = { version = "2.0.5" }
serde ={ version = "*"}
