[package]
name = "fast_common"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2021"

build = "build.rs"
[build-dependencies]
config_struct = { version = "0.5.0", features = ["toml-parsing"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1" }
actix-http = { version = "3.2.2" }
anyhow = { version = "1.0.65" }
tokio = { version = "1.21.1", features = ["full"] }
meilisearch-sdk = "0.19.0"
validator = "0.16.0"
validator_derive = "0.16.0"
validators = { version = "0.24.2", features = [] }
thiserror = { version = "1.0.35", features = [] }

#token
jsonwebtoken = { version = "8.1.1" }

#json支持(必须)
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_derive = "1.0.144"

#日期支持(必须)
chrono = { version = "0.4.22", features = ["serde"] }

#log日志支持(必须)
log = "0.4.17"
env_logger = { version = "0.9.0" }

#BigDecimal支持(可选)
bigdecimal = "0.3.0"

#rbatis支持
rbatis = { version = "4.0.37" }
rbdc-mysql = { version = "0.1.16" }
rbs={ version = "0.1.11"}
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-actix-rustls", "macros","debug-print" ] }
#静态初始化
lazy_static = "1.4.0"
once_cell = "1.14.0"
state = { version = "0.5.3", features = ["tls"] }
async_once = "0.2.6"
#异步
futures = "0.3.24"

#网络请求
reqwest = "0.11.11"
deadpool-redis = { version = "0.10.2" }
redis = { version = "0.21.6", default-features = false, features = [] }

short-crypt = "1.0.24"

#解析toml
#toml_edit = "0.14.2"
#toml-parse = "0.2.7"

uuid = "1.1.2"
mime = "0.3.14"

captcha = "0.0.9"
qrcode = "0.12"
image = "0.24.1"
async-trait = "0.1.53"
